# rtf_rs

./: Cargo.toml  Makefile
.github/workflows/: ci.yaml
src/: lib.rs
src/errors/: mod.rs
src/rtf/: color.rs  destination.rs  document.rs  docx.rs  font.rs  group.rs  mod.rs  rtf_control.rs  style.rs  table.rs  table_border.rs  text.rs
src/rtf/snapshots/: rtf_rs__rtf__tests__rtf_test_1.snap
tests/: mod.rs
tests/mocks/: helloworld.rtf
tests/snapshots/: r#mod__tests__rtf_test_1.snap
